SC/20: Add remarks about bulkiness and usefulness of keeping oractemp files.

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -2539,10 +2539,14 @@ you should also set \param{ORAC\_KEEP}.
 \begin{terminalv}
 % setenv ORAC_KEEP 1
 \end{terminalv}
-However, this still excludes oractemp files. To retain these set
+However, this still excludes temporary files made during a recipe step,
+whose names have the \file{oractemp} prefix.  To retain these set
 \begin{terminalv}
 % setenv ORAC_KEEP temp
 \end{terminalv}
+
+Retention of temporary and intermediate will require plenty of storage,
+but it can be invaluable during debugging.
 
 \item Now you are ready to run the pipeline. In this example, the
 recipe name on the end ensures that all data being processed using
