SC/20: Cite the specific ORAC-DR manual.
Meant to go in 94d386c889e511 but it was too painful to back out of
a few commits.

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -2521,7 +2521,7 @@ bad\_receptors} flag when running the pipeline.}
 \item Define environment variables to ensure the data is read from,
 and written to, the right place. Many are set automatically when the
 pipeline is initialised but others must be set manually. Details of
-the optional variables are given in \pipelinesun\ but you should
+the optional variables are given in \acsispipelinesun\ but you should
 specify where to find the raw data and where to write any files that
 are created.
 \begin{terminalv}
